--- a/mytest/nativelib/src/main/res/layout/activity_nativeentrancetest.xml
+++ b/mytest/nativelib/src/main/res/layout/activity_nativeentrancetest.xml
@@ -25,9 +25,18 @@
         <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="play"
+                android:text="seekTo20S"
+                android:onClick="onSeekBtnClick"
+                />
+
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="playTwoVideo"
                 android:onClick="onPlayBtn2Click"
                 />
+
+
     </LinearLayout>
 
 
