增加倍速播放（需要调整minbuff，适应不同的倍速）

--- a/mytest/nativelib/src/main/res/layout/activity_nativeentrancetest.xml
+++ b/mytest/nativelib/src/main/res/layout/activity_nativeentrancetest.xml
@@ -36,6 +36,12 @@
                 android:onClick="onPlayBtn2Click"
                 />
 
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="setSpeed1P5"
+                android:onClick="onSetPeed"
+                />
 
     </LinearLayout>
 
