--- a/mytest/nativelib/src/main/res/layout/activity_nativeentrancetest.xml
+++ b/mytest/nativelib/src/main/res/layout/activity_nativeentrancetest.xml
@@ -55,6 +55,13 @@
                 android:text="rtsp"
                 android:onClick="onRTSPPlayBtnClick"
                 />
+
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="translate"
+                android:onClick="onTranslateBtnClick"
+                />
     </LinearLayout>
 
 
